--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,24 +1,33 @@
-/*-- Simple CSS Reset -- */
+@font-face {
+	font-family: sofia;
+	font-weight: normal;
+    src: url("./font/Sofia Pro Regular.otf") format("opentype");
+}
 
-
+@font-face {
+    font-family: sofia;
+    font-weight: bold;
+    src: url("./font/Sofia Pro Bold.otf") format("opentype");
+}
+@font-face {
+    font-family: sofia;
+    font-weight: 500;
+    src: url("./font/Sofia Pro Medium.otf") format("opentype");
+}
 * {
 	padding: 0;
 	margin: 0;
+	font-family: sofia !important;
 }
-
-
-/* -- Body styles -- */
-
-
+.s-font{
+	font-family: sofia !important;
+}
 body {
 	background-color: #f0f1f3;
 	color:#667073;
 	font: 16px/1.3 'Arial',sans-serif;
+	font-family: sofia;
 }
-
-
-/* -- Header styles -- */
-
 
 .homebanner {
 	display: none;
@@ -38,19 +47,9 @@ body {
 	color: #d6441b;
 }
 
-#logo {
-	text-decoration: none;
-	color:white !important;
-}
-
-/* -- Slide styles -- */
-
 .slides section{
 	text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
 }
-
-/* -- Form styles -- */
-
 
 form.login {
 	position: fixed;
@@ -74,7 +73,7 @@ form.login span {
 	font-size: 18px;
 }
 
-form.login input[type=text] {
+form.login input[type=password] {
 	position: relative;
 	left: -5px;
 	width: 160px;
@@ -87,12 +86,12 @@ form.login input[type=text] {
 	margin-top: 26px;
 }
 
-form.login input[type=text].denied {
+form.login input[type=password].denied {
 	border: 1px solid red;
 	outline: none;
 }
 
-form.login input[type=text].animation {
+form.login input[type=password].animation {
 	transition: 0.1s;
 	-webkit-animation-name: shakeMe;
 	-webkit-animation-duration: 0.6s;
@@ -102,7 +101,7 @@ form.login input[type=text].animation {
 	animation-delay: 0s;
 }
 
-form.login input[type=text]::-webkit-input-placeholder {
+form.login input[type=password]::-webkit-input-placeholder {
 	color: #ABABAB;
 }
 
@@ -176,9 +175,6 @@ form.login input[type=submit] {
 	}
 }
 
-/* -- Blur effect -- */
-
-
 .homebanner.blurred, div.reveal.blurred {
 	-webkit-filter: blur(4px);
 	filter: blur(4px);
@@ -190,26 +186,4 @@ form.login input[type=submit] {
 .homebanner, div.reveal {
 	-webkit-transition: 0.3s;
 	transition: 0.3s;
-}
-
-
-/* -- Demo ads -- */
-
-
-@media (max-width: 1024px) {
-    #bsaHolder{ display:none;}
-}
-
-
-/* -- Link to Tutorialzine -- */
-
-
-.tz-link{
-	text-decoration: none;
-	color: #fff !important;
-	font: bold 36px Arial,Helvetica,sans-serif !important;
-}
-
-.tz-link span{
-	color: #da431c;
 }
